--- a/template_md/messages.tmpl
+++ b/template_md/messages.tmpl
@@ -1,10 +1,9 @@
-package markdown
-
-const MarkDownTemplateMessages string = `---
+---
 type: messages
 disabled rules: [ all ]
 google:
   resource_name: {{ .ResourceName }}
+  etag: {{ .ETag }}
 ---
 
 Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
@@ -15,5 +14,5 @@ Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
 
 |Date|Direction|Text|
 |---|---|---|
-{{ range .MessageData }}|{{ .Date }}|{{ if eq .Direction "2" }}outgoing{{ else }}incoming{{ end }}|{{ .Text }}|
-{{ end }}`
+{{ range .MessageData }}|{{ .Date }}|{{ .Direction }}|{{ .Text }}|
+{{ end }}
