feat: add header fro date

--- a/template_md/calls.tmpl
+++ b/template_md/calls.tmpl
@@ -1,6 +1,8 @@
 ---
 type: calls
 disabled rules: [ all ]
+date created: {{ .DateCreated }}
+date modified: {{ .DateModified }}
 google:
   resource_name: {{ .ResourceName }}
 ---
