--- a/template_md/contactsheet.tmpl
+++ b/template_md/contactsheet.tmpl
@@ -1,6 +1,8 @@
 ---
 type: person
 disabled rules: [ all ]
+date created: {{ .DateCreated }}
+date modified: {{ .DateModified }}
 google:
   resource_name: {{ .ResourceName }}
 ---
