--- a/template_md/messages.tmpl
+++ b/template_md/messages.tmpl
@@ -1,6 +1,8 @@
 ---
 type: messages
 disabled rules: [ all ]
+date created: {{ .DateCreated }}
+date modified: {{ .DateModified }}
 google:
   resource_name: {{ .ResourceName }}
 ---
