feat: use array for additional tags

--- a/examples/template_md/contactsheet.tmpl
+++ b/examples/template_md/contactsheet.tmpl
@@ -2,10 +2,11 @@
 type: person
 disabled rules: [ all ]
 google:
-  resource_name: {{ .ResourceName }}
+resource_name: {{ .ResourceName }}
+tags:
+  - contact{{ if gt (len .Tags) 0 }}{{ range .Tags }}
+  - {{ . }}{{ end }}{{ end }}
 ---
-
-Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
 
 {{ .PersonalData }}{{ if gt (len .Addresses) 0 }}## Address
 
