--- a/examples/template_md/messages.tmpl
+++ b/examples/template_md/messages.tmpl
@@ -2,10 +2,11 @@
 type: messages
 disabled rules: [ all ]
 google:
-  resource_name: {{ .ResourceName }}
+resource_name: {{ .ResourceName }}
+tags:
+  - contact{{ if gt (len .Tags) 0 }}{{ range .Tags }}
+  - {{ . }}{{ end }}{{ end }}
 ---
-
-Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
 
 [[{{.MainLinkName}}]]
 
@@ -13,5 +14,5 @@ Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
 
 |Date|Direction|Text|
 |---|---|---|
-{{ range .MessageData }}|{{ .Date }}|{{ .Direction }}|{{ .Text }}|
+{{ range .MessageData }}|{{ .Date }}|{{ if eq .Direction "2" }}outgoing{{ else }}incoming{{ end }}|{{ .Text }}|
 {{ end }}
