--- a/examples/template_md/calls.tmpl
+++ b/examples/template_md/calls.tmpl
@@ -2,10 +2,11 @@
 type: calls
 disabled rules: [ all ]
 google:
-  resource_name: {{ .ResourceName }}
+resource_name: {{ .ResourceName }}
+tags:
+  - contact{{ if gt (len .Tags) 0 }}{{ range .Tags }}
+  - {{ . }}{{ end }}{{ end }}
 ---
-
-Tags: #contact {{ if .Tags }}{{ .Tags }}{{ end }}
 
 [[{{.MainLinkName}}]]
 
