feat(#31): save templates into embed.files
Clsoes #31

--- a/internal/generator/markdown/content/calls.tmpl
+++ b/internal/generator/markdown/content/calls.tmpl
@@ -1,12 +1,10 @@
-package markdown
-
-const MarkDownTemplateCalls string = `---
+---
 type: calls
 disabled rules: [ all ]
 google:
   resource_name: {{ .ResourceName }}
 tags:
-  - contact{{ if .Tags }}{{ range .Tags }}
+  - contact{{ if gt (len .Tags) 0 }}{{ range .Tags }}
   - {{ . }}{{ end }}{{ end }}
 ---
 
@@ -17,4 +15,4 @@ tags:
 |Date|Direction|Number|Duration (s)|
 |---|---|---|---|
 {{ range .CallData.Call }}|{{ .ReadableDate }}|{{ if eq .Type "2" }}outgoing{{ else }}incoming{{ end }}|{{ .Number }}|{{ .Duration }}|
-{{ end }}`
+{{ end }}
