--- a/internal/generator/markdown/content/notes.tmpl
+++ b/internal/generator/markdown/content/notes.tmpl
@@ -1,6 +1,4 @@
-package markdown
-
-const NotesSheetTemplate string = `---
+---
 type: person
 disabled rules: [ all ]
 google:
@@ -10,4 +8,4 @@ tags:
   - {{ . }}{{ end }}{{ end }}
 ---
 
-return to [[{{.MainLinkName}}]]`
+return to [[{{.MainLinkName}}]]
