fix: remove empty line on top if no birthday

--- a/internal/generator/markdown/content/contactsheet.tmpl
+++ b/internal/generator/markdown/content/contactsheet.tmpl
@@ -1,5 +1,5 @@
----
-{{ if .Birthday }}birthday: {{ .Birthday }}{{ end }}
+---{{ if .Birthday }}
+birthday: {{ .Birthday }}{{ end }}
 type: person
 disabled rules: [ all ]
 google:
