feat: prepare call split

--- a/internal/generator/markdown/content/calls.tmpl
+++ b/internal/generator/markdown/content/calls.tmpl
@@ -8,9 +8,9 @@ tags:
   - {{ . }}{{ end }}{{ end }}
 ---
 
-[[{{.MainLinkName}}]]
+[[{{.MainLinkName}} Calls]]
 
-# Call log
+# Call log {{.GroupKey}}
 
 |Date|Direction|Number|Duration (s)|
 |---|---|---|---|
