add links calls (#33)
* feat(calls): add links

* feat: prepend asanitized number to link

--- a/internal/generator/markdown/content/calls.tmpl
+++ b/internal/generator/markdown/content/calls.tmpl
@@ -14,5 +14,5 @@ tags:
 
 |Date|Direction|Number|Duration (s)|
 |---|---|---|---|
-{{ range .CallData.Call }}|{{ .ReadableDate }}|{{ if eq .Type "2" }}outgoing{{ else }}incoming{{ end }}|{{ .Number }}|{{ .Duration }}|
+{{ range .CallData.Call }}|[[{{ .SanitizedNumber }}_{{ .Date }}|{{ .ReadableDate }}]]|{{ if eq .Type "2" }}outgoing{{ else }}incoming{{ end }}|{{ .Number }}|{{ .Duration }}|
 {{ end }}
